--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@ html,body{
   height:100%;
   padding: 0;
   margin: 0;
-  background: var(--background);
+  background: rgb(252, 252, 252);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
