--- a/components/UIStyle/Login.css
+++ b/components/UIStyle/Login.css
@@ -117,3 +117,124 @@
   background-color: #2c6457;
   cursor: pointer;
 }
+
+
+.SignUp_container {
+  display: grid;
+  width: 25%;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(128, 128, 128, 0.215);
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px 5px rgba(209, 194, 194, 0.147);
+  margin: 0 auto;
+  position: relative;
+  top: 50px;
+}
+
+
+.SignUp_container .admin_title {
+  position: relative;
+  left: 50px;
+  display: grid;
+  width: 400px;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+}
+.SignUp_container .admin_title h2 {
+  font-size: 36px;
+  font-family: "Noto+Sans+JP", sans-serif;
+  color: #58AF9B;
+}
+.SignUp_container .admin_title .admin {
+  display: flex;
+  position: relative;
+  left: 90px;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+}
+.SignUp_container .admin_title .admin i {
+  font-size: 40px;
+}
+.SignUp_container .icons {
+  display: flex;
+  width: 160px;
+  height: 50px;
+  gap: 15px;
+  position: relative;
+  top: 10px;
+  left: 165px;
+}
+.SignUp_container .icons .icon {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgba(128, 136, 134, 0.4431372549);
+}
+.SignUp_container .icons .icon i {
+  font-size: 18px;
+}
+.SignUp_container .icons .icon:hover {
+  background-color: gray;
+  cursor: pointer;
+}
+.SignUp_container .admin_Input {
+  display: grid;
+  width: 500px;
+  height: 300px;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.SignUp_container .admin_Input .edit_acc {
+  width: 250px;
+  height: 40px;
+  border-style: none;
+  background-color: #F0F4F3;
+  border-radius: 5px 5px 5px 5px;
+}
+.SignUp_container .admin_Input .edit_password {
+  width: 250px;
+  height: 40px;
+  border-style: none;
+  background-color: #F0F4F3;
+  border-radius: 5px 5px 5px 5px;
+}
+.SignUp_container .admin_Input .edit_password::placeholder {
+  text-align: center;
+  font-size: 12px;
+}
+.SignUp_container .admin_Input .edit_acc::placeholder {
+  text-align: center;
+  font-size: 12px;
+}
+.SignUp_container .admin_Input .check_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #58AF9B;
+  width: 200px;
+  height: 35px;
+  position: relative;
+  left: 30px;
+  border-radius: 5px 5px 5px 5px;
+}
+.SignUp_container .admin_Input .check_button .LoginBtn {
+  background-color: #58AF9B;
+  width: 100%;
+  height: 100%;
+  border-style: none;
+  color: white;
+}
+.SignUp_container .admin_Input .check_button .LoginBtn:hover {
+  background-color: #2c6457;
+  cursor: pointer;
+}
